19.8
- flashsticker
- improved marktabsaved (customizable message, portrait alignment)
- sql_copy_from_query supports negation ($negs) and overrides ($resets)

19.7
- uiconfig (doc-centric model, master search)

19.6
- cookie encoding backward compatibility fix for php7.3
- syntax cleanup for php8.1, narray_val in forminput
- php8 connector fixes; JIT indicator in sysinfo

19.5
- document tab title syncs with tab title if GYROSCOPE_SHORT_APP_NAME is set

19.4
- mysqli connector - auto recover from zombie connections
- fixed main view scroll bar in specific screen resolutions
- codegen: multi-or
- libnumfile
- valstr "complainer" parameter

19.3
- dismountable lookup view
- wss proto split
- strict mode cleanup

19.2
- Callouts

19.1
- FaultException and fault traps

19.0
- redis channel split
- ctrl+shift+r to refresh tab, ctrl+shift+4 to close tab
- ip alias mapping
- multi-window popout

18.9
- tab docking
- webauth Firefox fix
- tab shrinking

18.8
- report bookmark bingo mode, share mode, gs containment

*18.7
- webauthn support for EC and RSA devices

*18.6
- wss.js changed to use WSS 1.6. patch ws_js.php and icl/reauth.inc.php

18.5
- codegen: clickhouse faceted nav w/ pivot table

*18.4
- dark mode

*18.3
- non-numeric record IDs
- ClickHouse support

18.2
- gamepad controls

18.1
- auto saver
- lookupentity using POST for textarea
- oninput in addition to onchange to instantly trigger tabchanged event

18.0
- encdec remote mode change

17.9
- WSS Server (using Redis)

*17.8
- WSSS server (settings in lb.php, patch forminput.php)
- refresh.php for clearing cache

*17.7
- encdec remote mode

*17.6
- entity-specific table namespace
- codegen: vendor portal

17.5
- diff logging
- home dash reports


*17.4
- MS Graph integration

17.3
- updated postgre connector (sql.php.pg)
- added pastetotextarea function to autocomplete.js

17.2
- codegen: bubble chart

*17.1
- gsx/multi-core support

17.0
- sql readonly mode