@@ -52,7 +52,7 @@ function showaccount(){
 </div>
 <div class="inputrow">Your Login: <?php echo htmlspecialchars($login);?></div>
 <?php
-if ($user['groups']['chats']){
+if (isset($user['groups']['chats'])){
 ?>
 <div class="inputrow">
 <input type="checkbox" id="accountcanchat" <?php if ($canchat) echo 'checked';?> onclick="document.appsettings.beepnewchat=this.checked;ajxpgn('statusc',document.appsettings.binpage+'?cmd=setcanchat&canchat='+(this.checked?1:0));"> <label for="accountcanchat">I'm available for a support chat</label>
