@@ -1,5 +1,5 @@
 GYROSCOPE
-Copyright (c) 2007-2022, Antradar Software Inc. 
+Copyright (c) 2007-2023, Antradar Software Inc. 
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
