@@ -2,6 +2,7 @@
 - flashsticker
 - improved marktabsaved (customizable message, portrait alignment)
 - sql_copy_from_query supports negation ($negs) and overrides ($resets)
+- numfile: stream mode
 
 19.7
 - uiconfig (doc-centric model, master search)
